--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -128,6 +128,7 @@ footer ul li a {
   transition: color 0.3s;
 }
 
-footer ul li a:hover {
+footer ul li a:hover,
+footer ul li:hover  {
   color: #fbbf24; /* Yellow color on hover */
 }
