--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29,6 +29,12 @@ header nav a {
   transition: color 0.3s;
 }
 
+@media screen and (max-width: 750px) {
+	nav {
+		display: none;
+	} 
+}
+
 header nav a:hover {
   color: #fbbf24; /* Yellow color on hover */
 }
